--- a/src/main/resources/templates/random.html
+++ b/src/main/resources/templates/random.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<html
+        lang="ko"
+        xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link href="'https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css'" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Thymeleaf</title>
 </head>
 <body>
-<h2>추천 노래</h2>
-<div th:object="${song}" th:if="${song} != null">
-    <p>제목 : <span th:text="*{title}"></span></p>
-    <p>가수 : <span th:text="*{singer}"></span></p>
+<div class="card text-center"
+     th:object="${song}"
+     th:if="${song}!=null"
+>
+    <div class="card-header">
+        추천 노래
+    </div>
+    <div class="card-body">
+        <h5 class="card-title" th:text="*{title}"></h5>
+        <p class="card-text" th:text="*{singer}"></p>
+        <a
+                th:href="'https://www.youtube.com/results?search_query=노래방+' + *{title}"
+                class="btn btn-primary">
+            노래방
+        </a>
+    </div>
+    <a
+            th:href="'https://www.youtube.com/results?search_query+뮤직비디오=' + *{title}"
+            class="btn btn-secondary">
+        뮤직 비디오
+    </a>
 </div>
 </body>
 </html>
